# vibe-coding-showcase

./: .cursorrules  CURSOR_BEST_PRACTICES.md  GEMINI.md  MAINSTREAM_AI_GUIDE.md  README.md  RULES_DESIGN_GUIDE.md  pyproject.toml
examples/: golden_service.py
src/: schemas.py
tests/: test_analyzer.py
